got game working

--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,20 @@
-.App {
-  text-align: center;
+.App{
+    font-family: 'Europa', sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
+.title {
+    width: 100%;
+    text-align: center;
+    margin-bottom: 0px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.scoreSummary {
+    width: 71%;
+    text-align: center;
+    margin-bottom: 20px;
+    color: black;
 }
 
-.App-link {
-  color: #09d3ac;
+.row {
+    margin: 30px;
 }
